fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ body {
   max-width: 700px;
 }
 
+.card-rest {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .card-image img {
   width: 100%;
   border-radius: 10px;
